<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaIdea">

    <!-- Título del formulario -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_formulario"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Input para el nombre de la nueva idea -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/nombre_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombreIdea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input para la descripción de la nueva idea -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/descripcion_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescripcionIdea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para guardar la nueva idea -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"/>

    <!-- Botón para cancelar y volver -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
